# tcpform-protocol-lab

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.published.yml  compose.raw-test.yml  package-lock.json  package.json  playwright.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container-release.yml  release.yml
dashboard/: advanced-tools.js  advanced-tools.test.js  analysis-tools.js  analysis-tools.test.js  flow.js  flow.test.js  index.html  nginx.conf  order.js  order.test.js  packet-view.js  packet-view.test.js  platform-ui.js  tcpform-engine.wasm  visualizer.e2e.js  wasm-engine.js  wasm-engine.test.js  workbench-tools.js  workbench-tools.test.js  workbench-worker.js
docs/: feature-matrix.md  no-external-setup.md  platform.md
editors/vscode/: .vscodeignore  LICENSE  README.md  extension.js  helpers.js  helpers.test.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: tcpform.tmLanguage.json
examples/: advanced_actions.tcpf  bgp.tcpf  binary_hex.tcpf  bittorrent.tcpf  browser_bundle_library.tcpf  browser_bundle_main.tcpf  conditional_cases.tcpf  custom.tcpf  custom_header_schema.tcpf  dhcp_dora.tcpf  dns.tcpf  dns_cases.tcpf  dynamic_message_schema.tcpf  error_connection_failures.tcpf  ftp.tcpf  go_back_n.tcpf  grpc_server_streaming.tcpf  http1_0.tcpf  http1_1_keepalive.tcpf  http2_grpc.tcpf  icmp_ping.tcpf  imap.tcpf  imported_module.tcpf  mqtt.tcpf  nat_hole_punch.tcpf  ntp.tcpf  pop3.tcpf  quic.tcpf  raw_headers.tcpf  redis.tcpf  retransmit_transport.tcpf  rich.tcpf  sctp_handshake.tcpf  sip_call.tcpf  sliding_window.tcpf  smtp.tcpf  ssh.tcpf  stop_and_wait.tcpf  structured_messages.tcpf  stun.tcpf  (+8 more)
examples/docker/: error_dependency.tcpf  error_flow.tcpf  error_scenarios.tcpf  raw_docker_tcp.tcpf  raw_docker_udp.tcpf
examples/modules/: reusable.tcpf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dsl.rs  hex.rs
scripts/: build-wasm.sh  docker-raw-test.sh  docker-visual-lab.sh
src/: ast.rs  ci_report.rs  compat.rs  completion.rs  conformance.rs  doctor.rs  dynamic_schema.rs  engine.rs  fuzz_export.rs  graph.rs  interoperability.rs  kaitai.rs  lib.rs  loader.rs  main.rs  model.rs  model_check.rs  native_fuzz.rs  observability.rs  orchestrate.rs  output.rs  packet.rs  packetdrill.rs  parser.rs  pcap_import.rs  performance.rs  platform.rs  plugin.rs  primitives.rs  productivity.rs  proxy.rs  raw_socket.rs  snapshot.rs  spec_traceability.rs  standards.rs  storage.rs  template_registry.rs  templates.rs  tls_audit.rs  tooling.rs  (+2 more)
tests/: integration.rs  property.rs
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
