[package]
name = "tcpform"
version = "0.3.1"
edition = "2021"
rust-version = "1.97"
description = "Declaratively compose protocol primitives (send/recv/ack) into new protocols, Terraform-style"
license = "MIT"
repository = "https://github.com/penguin425/tcpform-protocol-lab"
homepage = "https://github.com/penguin425/tcpform-protocol-lab"
readme = "README.md"

[lib]
name = "tcpform"
path = "src/lib.rs"

[[bin]]
name = "tcpform"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "3.0.0"
regex-lite = "0.1.9"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tungstenite = "0.30"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "io-util", "net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
quick-xml = "0.41"
rcgen = "0.14"
