[package]
name = "tcpform"
version = "0.7.2"
edition = "2021"
rust-version = "1.97"
description = "Declaratively compose, validate, and test network protocol conversations"
license = "MIT"
repository = "https://github.com/penguin425/tcpform-protocol-lab"
homepage = "https://github.com/penguin425/tcpform-protocol-lab"
readme = "README.md"

[lib]
name = "tcpform"
path = "src/lib.rs"

[[bin]]
name = "tcpform"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
ed25519-dalek = "3.0.0"
flate2 = "1"
regex-lite = "0.1.9"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tungstenite = "0.30"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "io-util", "net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "1"
yaml_serde = "0.10.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
quick-xml = "0.41"
rcgen = "0.14"
